; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_tsvector.c_uniquePos.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_tsvector.c_uniquePos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compareWordEntryPos = common dso_local global i32 0, align 4
@MAXNUMPOS = common dso_local global i32 0, align 4
@MAXENTRYPOS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @uniquePos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uniquePos(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp sle i32 %8, 1
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  store i32 %11, i32* %3, align 4
  br label %92

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = bitcast i32* %13 to i8*
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @compareWordEntryPos, align 4
  %17 = call i32 @qsort(i8* %14, i32 %15, i32 4, i32 %16)
  %18 = load i32*, i32** %4, align 8
  store i32* %18, i32** %7, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 1
  store i32* %20, i32** %6, align 8
  br label %21

21:                                               ; preds = %80, %12
  %22 = load i32*, i32** %6, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = ptrtoint i32* %22 to i64
  %25 = ptrtoint i32* %23 to i64
  %26 = sub i64 %24, %25
  %27 = sdiv exact i64 %26, 4
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = icmp slt i64 %27, %29
  br i1 %30, label %31, label %83

31:                                               ; preds = %21
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @WEP_GETPOS(i32 %33)
  %35 = load i32*, i32** %7, align 8
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @WEP_GETPOS(i32 %36)
  %38 = icmp ne i32 %34, %37
  br i1 %38, label %39, label %64

39:                                               ; preds = %31
  %40 = load i32*, i32** %7, align 8
  %41 = getelementptr inbounds i32, i32* %40, i32 1
  store i32* %41, i32** %7, align 8
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %7, align 8
  store i32 %43, i32* %44, align 4
  %45 = load i32*, i32** %7, align 8
  %46 = load i32*, i32** %4, align 8
  %47 = ptrtoint i32* %45 to i64
  %48 = ptrtoint i32* %46 to i64
  %49 = sub i64 %47, %48
  %50 = sdiv exact i64 %49, 4
  %51 = load i32, i32* @MAXNUMPOS, align 4
  %52 = sub nsw i32 %51, 1
  %53 = sext i32 %52 to i64
  %54 = icmp sge i64 %50, %53
  br i1 %54, label %62, label %55

55:                                               ; preds = %39
  %56 = load i32*, i32** %7, align 8
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @WEP_GETPOS(i32 %57)
  %59 = load i32, i32* @MAXENTRYPOS, align 4
  %60 = sub nsw i32 %59, 1
  %61 = icmp eq i32 %58, %60
  br i1 %61, label %62, label %63

62:                                               ; preds = %55, %39
  br label %83

63:                                               ; preds = %55
  br label %80

64:                                               ; preds = %31
  %65 = load i32*, i32** %6, align 8
  %66 = load i32, i32* %65, align 4
  %67 = call i64 @WEP_GETWEIGHT(i32 %66)
  %68 = load i32*, i32** %7, align 8
  %69 = load i32, i32* %68, align 4
  %70 = call i64 @WEP_GETWEIGHT(i32 %69)
  %71 = icmp sgt i64 %67, %70
  br i1 %71, label %72, label %79

72:                                               ; preds = %64
  %73 = load i32*, i32** %7, align 8
  %74 = load i32, i32* %73, align 4
  %75 = load i32*, i32** %6, align 8
  %76 = load i32, i32* %75, align 4
  %77 = call i64 @WEP_GETWEIGHT(i32 %76)
  %78 = call i32 @WEP_SETWEIGHT(i32 %74, i64 %77)
  br label %79

79:                                               ; preds = %72, %64
  br label %80

80:                                               ; preds = %79, %63
  %81 = load i32*, i32** %6, align 8
  %82 = getelementptr inbounds i32, i32* %81, i32 1
  store i32* %82, i32** %6, align 8
  br label %21

83:                                               ; preds = %62, %21
  %84 = load i32*, i32** %7, align 8
  %85 = getelementptr inbounds i32, i32* %84, i64 1
  %86 = load i32*, i32** %4, align 8
  %87 = ptrtoint i32* %85 to i64
  %88 = ptrtoint i32* %86 to i64
  %89 = sub i64 %87, %88
  %90 = sdiv exact i64 %89, 4
  %91 = trunc i64 %90 to i32
  store i32 %91, i32* %3, align 4
  br label %92

92:                                               ; preds = %83, %10
  %93 = load i32, i32* %3, align 4
  ret i32 %93
}

declare dso_local i32 @qsort(i8*, i32, i32, i32) #1

declare dso_local i32 @WEP_GETPOS(i32) #1

declare dso_local i64 @WEP_GETWEIGHT(i32) #1

declare dso_local i32 @WEP_SETWEIGHT(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
